Took out float left; Issues with image wrapping.
Image wrapping issues need to be fixed

--- a/css/base.css
+++ b/css/base.css
@@ -117,10 +117,7 @@ footer {
     font-size: 12px;
     padding: 0 10px 0 10px;
 }
-/* Need help with photo missizing here */
-.left {
-    float: left;
-}
+
 
 
 .inline {
